# decodable-words-api

./: .gitignore  LICENSE  pyproject.toml  readme.md
decodable_words_api/: api.py  filter_words.py
src/: bad_words.py  filter_words.py
